--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.24",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
